# E-commerce

./: README.md  pyproject.toml
src/: __init__.py  main.py  models.py
tests/: __init__.py  test_models.py
